--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,21 @@ gradlew.bat
 /dist/
 /nbdist/
 /.nb-gradle/
+
+*.class
+*.log
+
+# sbt specific
+.cache/
+.history/
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
